packages/core/test/fixtures/validation/undefined-variable.pine
// @test validation/undefined-variable
// @description Should detect undefined variable
// @expects parse: success
// @expects error: message="Undeclared identifier"

//@version=6
indicator("Undefined Variable Test")

x = undefinedVar

plot(x)
