packages/core/test/fixtures/parse-errors/unclosed-bracket.pine
// @test parse-errors/unclosed-bracket
// @description Unclosed array bracket should fail
// @expects parse: fail

//@version=6
indicator("Parse Error Test")

arr = [1, 2, 3

plot(close)
